@@ -80,6 +80,11 @@ without an associated ASN.1 method, for example, KDF algorithms.
 Display a list of disabled features, those that were compiled out
 of the installation.
 
+=item B<-objects>
+
+Display a list of built in objects, i.e. OIDs with names.  They're listed in the
+format described in L<config(5)/ASN1 Object Configuration Module>.
+
 =back
 
 =head1 COPYRIGHT
